--- a/inicio.html
+++ b/inicio.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo</title>
     <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="css/carga.css">
     <script src="js/cargar.js"></script>
 </head>
 <body>
+    <div id="contenedor-carga">
+        <div id="carga"></div>
+    </div>
+
     <div class="lds-hourglass loader" id="loader"></div>
 
     <div class="row">
@@ -28,10 +33,13 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="https://st1.uvnimg.com/ff/2f/7d21710e48aabb928c2346aa6dd0/KREWELLA.jpg" class="card-img-top">
+                <!--<img src="https://st1.uvnimg.com/ff/2f/7d21710e48aabb928c2346aa6dd0/KREWELLA.jpg" class="card-img-top">-->
             </div>
         </div>
     </div>
+
+    <script src="js/carga.js"></script>
+
     
 </body>
 </html>
