terminado, detalles pendientes

--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +10,13 @@
     <link rel="stylesheet" href="css/carga.css">
     <script src="js/cargar.js"></script>
 </head>
+
 <body>
-    <div id="contenedor-carga">
-        <div id="carga"></div>
-    </div>
-
-    <div class="lds-hourglass loader" id="loader"></div>
-
-    <div class="row">
+    <div class="container">
+        <script src="js/carga.js"></script>
+        <div id="contenedor-carga">
+            <div id="carga"></div>
+        </div>
         <div class="col-lg-12 col-md-12 col-sm-12">
             <strong>
                 <p> What is Lorem Ipsum?</p>
@@ -31,6 +31,12 @@
                 versions of Lorem Ipsum.
             </p>
         </div>
+    </div>
+
+
+
+    <div class="row">
+            
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card">
                 <!--<img src="https://st1.uvnimg.com/ff/2f/7d21710e48aabb928c2346aa6dd0/KREWELLA.jpg" class="card-img-top">-->
@@ -38,8 +44,9 @@
         </div>
     </div>
 
-    <script src="js/carga.js"></script>
+  
 
-    
+
 </body>
+
 </html>
